--- a/Grapher.WPF/MainWindow.xaml
+++ b/Grapher.WPF/MainWindow.xaml
@@ -35,6 +35,7 @@
 			<RowDefinition Height="*" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 		<!--<Grid.OpacityMask>
 		<VisualBrush Visual="{Binding ElementName=MainBorder}" />
@@ -48,18 +49,8 @@
 				<MenuItem Header="✕" Click="Window_Close" Style="{StaticResource MenuItemStyle}" />
 			</Menu>
 		</Grid>
-		<Grid Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" Grid.RowSpan="3" TextBlock.FontSize="32">
-			<StackPanel>
-				<TextBlock Text="Welcome to Grapher" HorizontalAlignment="Center" Style="{StaticResource TextBlockFadeIn}">
-					<TextBlock.RenderTransform>
-						<TranslateTransform />
-					</TextBlock.RenderTransform>
-				</TextBlock>
-				<TextBlock x:Name="DisplayName" FontSize="32" />
-				<TextBlock x:Name="ODataContext" FontSize="32" />
-				<TextBlock x:Name="AppId" FontSize="32" />
-				<TextBlock x:Name="CreatedDateTime" FontSize="32" />
-			</StackPanel>
-		</Grid>
+		<DockPanel Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" Grid.RowSpan="4" TextBlock.FontSize="32">
+			<Frame x:Name="GrapherNavigationFrame" NavigationUIVisibility="Hidden" />
+		</DockPanel>
 	</Grid>
 </Window>
