--- a/Grapher.WPF/Views/MainWindow.xaml
+++ b/Grapher.WPF/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Grapher.MainWindow"
+﻿<Window x:Class="Grapher.WPF.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +16,7 @@
 		<Grid.Resources>
 			<ResourceDictionary>
 				<ResourceDictionary.MergedDictionaries>
-					<ResourceDictionary Source="MainStyle.xaml"/>
+					<ResourceDictionary Source="/Styles/MainStyle.xaml"/>
 				</ResourceDictionary.MergedDictionaries>
 			</ResourceDictionary>
 		</Grid.Resources>
